adjust issue header spacings

--- a/src/styles/Issue.scss
+++ b/src/styles/Issue.scss
@@ -4,11 +4,11 @@
 
   .header {
     border-bottom: 1px solid #e5e5e5;
-    padding: 10px 10px 10px 20px;
+    padding: 10px;
     background-color: #fafafa;
 
     & > div + div {
-      margin-left: 5px;
+      margin-left: 10px;
     }
 
     .url {
@@ -24,6 +24,7 @@
       margin-top: 6px;
       font-size: 14px;
       font-weight: bold;
+      min-height: 16px;
     }
 
     .labels {
